# protein-cluster-conformers

./: .buildinfo  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cluster_benchmark.py  cluster_conformers.html  cluster_conformers.utils.html  dev-requirements.txt  find_conformers.py  genindex.html  index.html  objects.inv  py-modindex.html  reinit_benchmark.sh  requirements.txt  run_uniref50.sh  search.html  searchindex.js  setup.cfg
.github/workflows/: documentation.yml  main.yml  publish.yml  tests.yml
_sources/: cluster_conformers.utils.rst.txt
_sources/api/: index.rst.txt
_sources/guide/: developer.rst.txt
api/: index.html
benchmark_data/: benchmark_monomeric_open_closed_conformers.csv  get_chains.py  get_updated_mmcifs.py
cluster_conformers/: cluster_chains.py  cluster_monomers.py  distance_differences.py  get_cluster_results.py
cluster_conformers/utils/: appearance_utils.py  db_utils.py  download_utils.py  io_utils.py  linear_algebra_utils.py  logging_utils.py  parsing_utils.py
doc/: Makefile
doc/source/: conf.py  (+3 more)
examples/: run_O34926.sh  run_P00519_merged_segms.sh  run_P02787.sh  run_P02787_seg1.sh  run_P02787_seg2.sh  run_P15291.sh  run_P69905.sh  run_P69905_variable_cores.sh
guide/: developer.html  getting_started.html  user_guide.html
tests/: test_case.py  test_cluster_chains.py  test_cluster_monomers.py  test_distance_differences.py  test_download_utils.py  test_io_utils.py  test_linear_algebra.py  test_parsing_utils.py
tutorials/: instructions.ipynb
workflows/: publish.yml  tests.yml
(+89 files in other folders)
